@@ -217,12 +217,12 @@ mailDomain="iallanis.info"
 #
 ##############################################################################
 
-# Allows not to use smbpasswd (if with_smbpasswd == 0 in smbldap_conf.pm) but
+# Allows not to use smbpasswd (if with_smbpasswd="0" in smbldap.conf) but
 # prefer Crypt::SmbHash library
 with_smbpasswd="0"
 smbpasswd="/usr/bin/smbpasswd"
 
-# Allows not to use slappasswd (if with_slappasswd == 0 in smbldap_conf.pm)
+# Allows not to use slappasswd (if with_slappasswd="0" in smbldap.conf)
 # but prefer Crypt:: libraries
 with_slappasswd="0"
 slappasswd="/usr/sbin/slappasswd"
